# ZipAirlines

./: .coverage  README.md  db.sqlite3  pyproject.toml
zipairlines/: settings.py  urls.py
zipairlines/api/: urls.py
zipairlines/api/airplane/: serializers.py  urls.py  views.py
zipairlines/migrations/: 0001_initial.py
zipairlines/models/: __init__.py  airplane.py
zipairlines/tests/: test_models.py  test_views.py
